kube/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-local
spec:
  ingressClassName: nginx
  rules:
    - host: "service.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-local
                port:
                  number: 80
